<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/contact"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="198dp" />

    <TextView
        android:id="@+id/textAccountContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_contact"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="229dp" />

    <TextView
        android:id="@+id/textAccountPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_phone"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="260dp" />

    <TextView
        android:id="@+id/textAccountAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_address"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="290dp" />

</android.support.constraint.ConstraintLayout>