<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="202dp"
        android:background="@color/colorAccent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/textInvoiceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_number"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginEnd="124dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="124dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="311dp"
        android:layout_height="166dp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="67dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/textAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="2dp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            tools:layout_editor_absoluteY="49dp"
            tools:layout_editor_absoluteX="2dp" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            tools:layout_editor_absoluteX="186dp"
            tools:layout_editor_absoluteY="133dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="353dp"
        android:layout_height="48dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="261dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textInvoiceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_number"
            tools:layout_editor_absoluteY="13dp"
            tools:layout_editor_absoluteX="144dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>